[tool.poetry]
name = "flaskapitested"
version = "0.1.0"
description = "Projeto de uma API simples desenvolvida em Flask e com testes"
authors = ["Felipe Bastos Nunes <felipebastos@ifce.edu.br>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
